dt10/soft/outputs/f09-dut-python.stderr.txt
  File "dt10/soft/outputs/f09.py", line 2
    def function(, a, b):
                 ^
SyntaxError: invalid syntax
